aula 5, submenu com dropdown

--- a/Index.html
+++ b/Index.html
@@ -29,13 +29,57 @@
                     <a href=""><img src="Assets/images/rss.png" border="0" width="26px" height="26px"></a>
                 </div>
 
-                <div class="topo2">
-                    <div class="topo2int">
-                        <div class="logo"><img src="Assets/images/logo-portal.png" border="0" height="95px"></div>
-                        <div class="pub"></div>
-                    </div>
-                </div>
             </div>
+        </div>
+
+
+        <div class="topo2">
+            <div class="topo2int">
+                <div class="logo"><img src="Assets/images/logo-portal.png" border="0" height="95px"></div>
+                <div class="pub"></div>
+            </div>
+        </div>
+
+        <div class="menu">
+            <div class="menuint">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li>
+                        <a href="">Economia</a>
+                    </li>
+                    <li><a href="">Entertenimento</a>
+                        <img src="Assets/images/arrow.png" width="10px" class="arrow">
+                        <div class="submenu">
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                        </div>
+                    </li>
+                    <li><a href="">Esportes</a>
+                        <img src="Assets/images/arrow.png" width="10px" class="arrow">
+                        <div class="submenu">
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                        </div>
+                    </li>
+                    <li><a href="">Geral</a></li>
+                    <li><a href="">Notícias</a>
+                        <img src="Assets/images/arrow.png" width="10px" class="arrow">
+                        <div class="submenu">
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                            <a href=""><div class="submenuitem">Submenu 1</div></a>
+                        </div>
+                    </li>
+                    <li><a href="">Polícia</a></li>
+                    <li><a href="">Vídeos</a></li>
+                </ul>
+            </div>          
         </div>
     </body>
 </html>
