aulas 6-9, adicionando o conteúdo da página e introduzindo o javascript com um slideshow

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
         <meta id="viewport" name="viewport" content="width=device-width", user-scalable="no">
         <title>Portal</title>
         <link rel="stylesheet" href="assets/CSS/Style.css">
+        <script type="text/javascript" src="Assets/JS/Script.js"></script>
     </head>
     <body>
         <div class="topo">
@@ -80,6 +81,117 @@
                     <li><a href="">Vídeos</a></li>
                 </ul>
             </div>          
+        </div>
+
+        <div class="ultnot">
+            <div class="ultnotint">
+                <div class="ultnotarea">
+                    <div class="ultnotl">ÚLTIMAS NOTÍCIAS</div>
+                    <div class="ultnotr">Alguma notícia aleatória</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="contentint">
+
+
+                <div class="leftside">
+                    <div class="slideshow" id="slideshow">
+                        <div class="slideposition">
+                            <div class="slidepositiondot" onclick="mudarSlide(0)"></div>
+                            <div class="slidepositiondot" onclick="mudarSlide(1)"></div>
+                            <div class="slidepositiondot" onclick="mudarSlide(2)"></div>
+                            <div class="slidepositiondot" onclick="mudarSlide(3)"></div>
+                        </div>
+                        <div class="slideshowarea">
+                            <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
+                                <div class="slideinf">
+                                    <div class="slideinftitle">Palpites 1</div>
+                                    <div class="slideinfsubtitle">Palpites</div>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
+                                <div class="slideinf">
+                                    <div class="slideinftitle">Palpites 2</div>
+                                    <div class="slideinfsubtitle">Palpites</div>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
+                                <div class="slideinf">
+                                    <div class="slideinftitle">Palpites 3</div>
+                                    <div class="slideinfsubtitle">Palpites</div>
+                                </div>
+                            </div>
+                            <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
+                                <div class="slideinf">
+                                    <div class="slideinftitle">Palpites 4</div>
+                                    <div class="slideinfsubtitle">Palpites</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="rightside">
+
+                    <div class="widget">
+
+                        <div class="widtitle">SOCIAL</div>
+                        <div class="widcontent">
+                            <a href=""><img src="Assets/images/youtube.png" border="0" width="26px" height="26px"></a>
+                            <a href=""><img src="Assets/images/twitter.png" border="0" width="26px" height="26px"></a>
+                            <a href=""><img src="Assets/images/facebook.png" border="0" width="26px" height="26px"></a>
+                            <a href=""><img src="Assets/images/google-plus.png" border="0" width="26px" height="26px"></a>
+                            <a href=""><img src="Assets/images/rss.png" border="0" width="26px" height="26px"></a>
+                        </div>
+
+                    </div>
+
+                    <div class="widget">
+
+                        <div class="widtitle">ÚLTIMAS NOTÍCIAS</div>
+                        <div class="widcontent">
+                            <div class="notitem">
+                                <a href="">notícia</a>
+                            </div>
+                            <div class="notitem">
+                                <a href="">notícia</a>
+                            </div>
+                            <div class="notitem">
+                                <a href="">notícia</a>
+                            </div>
+                            <div class="notitem">
+                                <a href="">notícia</a>
+                            </div>
+                            <div class="notitem">
+                                <a href="">notícia</a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="widget">
+
+                        <div class="widtitle">PUBLICIDADE</div>
+                        <div class="widcontent">
+                            <a href=""><img src="" height="275px" width="275px"></a>
+                        </div>
+
+                    </div>
+
+                    <div class="widget">
+
+                        <div class="widtitle">ENCONTRE-NOS NO FACEBOOK</div>
+                        <div class="widcontent">. . .</div>
+
+                    </div>
+
+                </div>
+
+
+            </div>
         </div>
     </body>
 </html>
