aula 10, conteúdo de notícias abaixo do slideshow

--- a/Index.html
+++ b/Index.html
@@ -131,6 +131,44 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="widget">
+
+                        <div class="widtitle">NOTÍCIAS</div>
+                        <div class="widcontent">
+                            <div class="notarea1">
+                                <div class="notarea2item principalnot">
+                                    <div class="notimg"><a href=""><img src="" border="0" width="80px" height="80px"></a></div>
+                                    <div class="nottitle"><a href="">Título</a></div>
+                                    <div class="notinf">Informações</div>
+                                </div>
+                            </div>
+                            <div class="notarea2">
+                                <div class="notarea2item">
+                                    <div class="notimg"><a href=""><img src="" border="0" width="80px" height="80px"></a></div>
+                                    <div class="nottitle"><a href="">Título</a></div>
+                                    <div class="notinf">Informações</div>
+                                </div>
+                                <div class="notarea2item">
+                                    <div class="notimg"><a href=""><img src="" border="0" width="80px" height="80px"></a></div>
+                                    <div class="nottitle"><a href="">Título</a></div>
+                                    <div class="notinf">Informações</div>
+                                </div>
+                                <div class="notarea2item">
+                                    <div class="notimg"><a href=""><img src="" border="0" width="80px" height="80px"></a></div>
+                                    <div class="nottitle"><a href="">Título</a></div>
+                                    <div class="notinf">Informações</div>
+                                </div>
+                                <div class="notarea2item">
+                                    <div class="notimg"><a href=""><img src="" border="0" width="80px" height="80px"></a></div>
+                                    <div class="nottitle"><a href="">Título</a></div>
+                                    <div class="notinf">Informações</div>
+                                </div>
+                            </div>
+                            <dir style="clear: both;"></dir>
+                        </div>
+
+                    </div>
                 </div>
 
 
@@ -193,5 +231,7 @@
 
             </div>
         </div>
+
+
     </body>
 </html>
