completando a responsividade do site e colocando menu para modo celular com javascript

--- a/Index.html
+++ b/Index.html
@@ -43,7 +43,8 @@
 
         <div class="menu">
             <div class="menuint">
-                <ul>
+                <img src="Assets/images/menu.png" borde="0" width="40px" height="40px" class="sandwich" onclick="toggleMenu()">
+                <ul id="menu">
                     <li><a href="">Home</a></li>
                     <li>
                         <a href="">Economia</a>
@@ -107,26 +108,26 @@
                         <div class="slideshowarea">
                             <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
                                 <div class="slideinf">
-                                    <div class="slideinftitle">Palpites 1</div>
-                                    <div class="slideinfsubtitle">Palpites</div>
+                                    <div class="slideinftitle">Título 1</div>
+                                    <div class="slideinfsubtitle">Subtítulo</div>
                                 </div>
                             </div>
                             <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
                                 <div class="slideinf">
-                                    <div class="slideinftitle">Palpites 2</div>
-                                    <div class="slideinfsubtitle">Palpites</div>
+                                    <div class="slideinftitle">Título 2</div>
+                                    <div class="slideinfsubtitle">Subtítulo</div>
                                 </div>
                             </div>
                             <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
                                 <div class="slideinf">
-                                    <div class="slideinftitle">Palpites 3</div>
-                                    <div class="slideinfsubtitle">Palpites</div>
+                                    <div class="slideinftitle">Título 3</div>
+                                    <div class="slideinfsubtitle">Subtítulo</div>
                                 </div>
                             </div>
                             <div class="slide" style="background-image: url(/Assets/images/palpites.jpg);">
                                 <div class="slideinf">
-                                    <div class="slideinftitle">Palpites 4</div>
-                                    <div class="slideinfsubtitle">Palpites</div>
+                                    <div class="slideinftitle">Título 4</div>
+                                    <div class="slideinfsubtitle">Subtítulo</div>
                                 </div>
                             </div>
                         </div>
